--- a/session3Vue/SDWebFrontEnd/package.json
+++ b/session3Vue/SDWebFrontEnd/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "bootstrap-icons": "^1.4.1",
     "bootstrap-vue": "^2.21.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
