--- a/requirements.txt
+++ b/requirements.txt
@@ -1,115 +1,81 @@
 alembic==1.5.8
-aniso8601==9.0.1
-appdirs==1.4.3
+aniso8601 @ file:///tmp/build/80754af9/aniso8601_1614708839015/work
 argon2-cffi==20.1.0
 async-generator==1.10
 attrs==20.3.0
-backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
+backcall==0.2.0
 bleach==3.3.0
-blis==0.4.1
-boto3==1.17.1
-botocore==1.20.1
-boxing==0.1.4
-cachetools==4.2.1
-catalogue==2.0.1
-certifi==2019.11.28
+certifi==2020.12.5
 cffi==1.14.5
-chardet==3.0.4
-click==7.1.2
-colorama @ file:///tmp/build/80754af9/colorama_1607707115595/work
-cymem==2.0.3
+chardet==4.0.0
+click @ file:///home/linux1/recipes/ci/click_1610990599742/work
+colorama==0.4.4
 decorator==5.0.7
 defusedxml==0.7.1
 entrypoints==0.3
-Flask==1.1.1
-Flask-API==2.0
+Flask @ file:///home/ktietz/src/ci/flask_1611932660458/work
 Flask-Cors==3.0.10
 Flask-HTTPAuth==4.3.0
 Flask-Migrate==2.7.0
-Flask-RESTful==0.3.8
+Flask-RESTful @ file:///tmp/build/80754af9/flask-restful_1613768889368/work
 Flask-SQLAlchemy==2.5.1
-Flask-WTF==0.14.3
-google-api-core==1.25.1
-google-auth==1.24.0
-google-cloud-core==1.5.0
-google-cloud-storage==1.28.1
-google-resumable-media==0.5.1
-googleapis-common-protos==1.52.0
 greenlet==1.0.0
-gunicorn==20.1.0
-htmlmin==0.1.12
-idna==2.8
+idna==2.10
 ipykernel==5.5.3
 ipython==7.23.0
-ipython-genutils @ file:///tmp/build/80754af9/ipython_genutils_1606773439826/work
+ipython-genutils==0.2.0
 ipywidgets==7.6.3
-itsdangerous==1.1.0
+itsdangerous @ file:///home/ktietz/src/ci/itsdangerous_1611932585308/work
 jedi==0.18.0
-Jinja2==2.10.3
-jmespath==0.10.0
+Jinja2 @ file:///tmp/build/80754af9/jinja2_1612213139570/work
 jsonschema==3.2.0
 jupyter==1.0.0
-jupyter-client @ file:///tmp/build/80754af9/jupyter_client_1616770841739/work
+jupyter-client==6.1.12
 jupyter-console==6.4.0
-jupyter-core @ file:///C:/ci/jupyter_core_1612213356021/work
+jupyter-core==4.7.1
 jupyterlab-pygments==0.1.2
 jupyterlab-widgets==1.0.0
 Mako==1.1.4
 MarkupSafe==1.1.1
 matplotlib-inline==0.1.2
 mistune==0.8.4
-mixpanel==4.4.0
 nbclient==0.5.3
 nbconvert==6.0.7
 nbformat==5.1.3
 nest-asyncio==1.5.1
 notebook==6.3.0
 numpy==1.20.2
-ordered-set==4.0.2
-orjson==3.4.7
 packaging==20.9
 pandas==1.2.4
 pandocfilters==1.4.3
-parso @ file:///tmp/build/80754af9/parso_1617223946239/work
+parso==0.8.2
 passlib==1.7.4
-pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
+pickleshare==0.7.5
 prometheus-client==0.10.1
 prompt-toolkit==3.0.18
-protobuf==3.14.0
-pyasn1-modules==0.2.8
 pycparser==2.20
 Pygments==2.9.0
 pyparsing==2.4.7
 pyrsistent==0.17.3
 python-dateutil @ file:///home/ktietz/src/ci/python-dateutil_1611928101742/work
-python-decouple==3.4
 python-editor==1.0.4
-pytz==2019.3
+pytz @ file:///tmp/build/80754af9/pytz_1612215392582/work
 pywin32==300
 pywinpty==1.0.1
 pyzmq==22.0.3
 qtconsole==5.1.0
 QtPy==1.9.0
-rarfile==3.1
-redis==3.5.3
-requests==2.22.0
-rq==1.7.0
-rsa==4.7
-s3transfer==0.3.4
+requests==2.25.1
 Send2Trash==1.5.0
 six @ file:///C:/ci/six_1605187374963/work
 SQLAlchemy==1.4.9
-srsly==2.4.0
 terminado==0.9.4
 testpath==0.4.4
-tornado @ file:///C:/ci/tornado_1606942392901/work
-traitlets @ file:///home/ktietz/src/ci/traitlets_1611929699868/work
-ujson==3.0.0
-urllib3==1.25.7
-wcwidth @ file:///tmp/build/80754af9/wcwidth_1593447189090/work
+tornado==6.1
+traitlets==5.0.5
+urllib3==1.26.4
+wcwidth==0.2.5
 webencodings==0.5.1
-Werkzeug==0.16.0
+Werkzeug @ file:///home/ktietz/src/ci/werkzeug_1611932622770/work
 widgetsnbextension==3.5.1
 wincertstore==0.2
-WTForms==2.3.3
-xmljson==0.2.0
